travis: build all variants individually

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ before_install:
 sudo: required
 
 script:
-  - nix build
+  - nix build use_curl_release -o release-tests
+  - nix build use_curl_fix1 -o fix1-tests
+  - nix build use_curl_git -o git-tests
   - ./run.sh
