--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 sudo: required
 
 script:
-  - nix build use_curl_release -o release-tests
-  - nix build use_curl_fix1 -o fix1-tests
-  - nix build use_curl_git -o git-tests
+  - nix build -f . use_curl_release -o release-tests
+  - nix build -f . use_curl_fix1 -o fix1-tests
+  - nix build -f . use_curl_git -o git-tests
   - ./run.sh
