move build steps to script for local use

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,5 @@ before_install:
 sudo: required
 
 script:
-  - nix build -f . use_curl_release -o release-tests
-  - nix build -f . use_curl_fix1 -o fix1-tests
-  - nix build -f . use_curl_git -o git-tests
+  - ./build.sh
   - ./run.sh
